view overflow fixed

--- a/administrator/templates/atum/scss/blocks/_global.scss
+++ b/administrator/templates/atum/scss/blocks/_global.scss
@@ -122,6 +122,13 @@ caption {
 .container-main,
 .system-debug {
   padding-bottom: 50px;
+  overflow: scroll;
+}
+
+.container-main::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 body .container-main {
